# language-webassembly

./: .gitignore  .travis.yaml  .travis.yml  README.md  appveyor.yml  language-webassembly.cabal  package.yaml  stack.yaml
src/Language/WebAssembly/: AST.hs  Annotated.hs  Desugar.hs  Kernel.hs  Memory.hs  Source.hs  Types.hs  Values.hs
